--- a/src/css/LikeInformation.css
+++ b/src/css/LikeInformation.css
@@ -29,6 +29,7 @@
 
 .likeinformation--text > * {
     margin: 0;
+    text-align: center;
 }
 
 /* Emoji section */
